# cinesight-backend

./: .gitattributes  .gitignore  README.md
imdb_api/: README.md  pyproject.toml
imdb_api/deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
imdb_api/imdb_api/: __init__.py  __main__.py  conftest.py  settings.py
imdb_api/imdb_api/services/: __init__.py
imdb_api/imdb_api/tests/: __init__.py
imdb_api/imdb_api/web/: __init__.py  application.py
imdb_api/imdb_api/web/api/: __init__.py  router.py
imdb_api/imdb_api/web/api/flops/: __init__.py  views.py
imdb_api/imdb_api/web/api/movies/: __init__.py  views.py
imdb_api/imdb_api/web/api/plots/: __init__.py  views.py
imdb_api/imdb_api/web/api/preview/: __init__.py  views.py
scraper/: requirements.txt
scraper/links/: Feature Film, Released between 1980-01-01 and 1980-12-31 (Sorted by Popularity Ascending)  Feature Film, Released between 1981-01-01 and 1981-12-31 (Sorted by Popularity Ascending)  Feature Film, Released between 1982-01-01 and 1982-12-31 (Sorted by Popularity Ascending)  Feature Film, Released between 1983-01-01 and 1983-12-31 (Sorted by Popularity Ascending)  Feature Film, Released between 1984-01-01 and 1984-12-31 (Sorted by Popularity Ascending)  Feature Film, Released between 1985-01-01 and 1985-12-31 (Sorted by Popularity Ascending)  Feature Film, Released between 1986-01-01 and 1986-12-31 (Sorted by Popularity Ascending)  Feature Film, Released between 1987-01-01 and 1987-12-31 (Sorted by Popularity Ascending)  Feature Film, Released between 1988-01-01 and 1988-12-31 (Sorted by Popularity Ascending)  Feature Film, Released between 1989-01-01 and 1989-12-31 (Sorted by Popularity Ascending)  Feature Film, Released between 1990-01-01 and 1990-12-31 (Sorted by Popularity Ascending)  Feature Film, Released between 1991-01-01 and 1991-12-31 (Sorted by Popularity Ascending)  Feature Film, Released between 1992-01-01 and 1992-12-31 (Sorted by Popularity Ascending)  (+30 more)
scraper/notebook/: analyse.ipynb
(+48 files in other folders)
